2015-03-17 AnyEvent::DNS::Nameserver v1.1
1)修复文档错误

2015-03-17 AnyEvent::DNS::Nameserver v1.0 release